tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
  Implement this plan?

  › 1. Yes, implement this plan          Switch to Default and start coding.
    2. Yes, clear context and implement  Fresh thread with this plan.
    3. No, stay in Plan mode             Continue planning with the model.

  Press enter to confirm or esc to go back
